--- a/fama-french/fama_french.ipynb
+++ b/fama-french/fama_french.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,27 +23,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No. of datasets:297\n"
+      "numpy version: 1.26.0\n",
+      "pandas version: 2.1.1\n",
+      "statsmodels version: 0.14.1\n",
+      "yfinance version: 0.2.30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# version of modules in a fstring\n",
+    "print(f'numpy version: {np.__version__}')\n",
+    "print(f'pandas version: {pd.__version__}')\n",
+    "print(f'statsmodels version: {sm.__version__}')\n",
+    "print(f'yfinance version: {yf.__version__}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of datasets: 297\n"
      ]
     }
    ],
    "source": [
     "# get the list of available datasets\n",
     "datasets = get_available_datasets()\n",
-    "print('No. of datasets:{}'.format(len(datasets)))\n",
+    "print(f'No. of datasets: {len(datasets)}')\n",
     "#datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +124,7 @@
        " 'Emerging_MOM_Factor']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,9 +132,20 @@
    "source": [
     "datasets_factors_5F = [dataset for dataset in datasets if '_5_' in dataset and 'Factor' in dataset]\n",
     "datasets_factors_3F = [dataset for dataset in datasets if '_3_' in dataset and 'Factor' in dataset]\n",
+    "datasets_factors_6F = [dataset for dataset in datasets if '_6_' in dataset and 'Factor' in dataset]\n",
     "\n",
+    "datasets_industry_5 = [dataset for dataset in datasets if '5' in dataset and 'Industry' in dataset]\n",
+    "datasets_industry_10 = [dataset for dataset in datasets if '10' in dataset and 'Industry' in dataset]\n",
+    "datasets_industry_12 = [dataset for dataset in datasets if '12' in dataset and 'Industry' in dataset]\n",
+    "datasets_industry_17 = [dataset for dataset in datasets if '17' in dataset and 'Industry' in dataset]\n",
+    "datasets_industry_30 = [dataset for dataset in datasets if '30' in dataset and 'Industry' in dataset]\n",
+    "datasets_industry_38 = [dataset for dataset in datasets if '38' in dataset and 'Industry' in dataset]\n",
+    "datasets_industry_48 = [dataset for dataset in datasets if '48' in dataset and 'Industry' in dataset]\n",
+    "datasets_industry_49 = [dataset for dataset in datasets if '49' in dataset and 'Industry' in dataset]\n",
+    "\n",
+    "datasets_factors_daily = [dataset for dataset in datasets if 'daily' in dataset and 'Factor' in dataset]\n",
     "datasets_factors_weekly = [dataset for dataset in datasets if 'weekly' in dataset and 'Factor' in dataset]\n",
-    "\n",
+    "datasets_factors_monthly = [dataset for dataset in datasets if 'monthly' in dataset and 'Factor' in dataset]\n",
     "\n",
     "datasets_factors = [dataset for dataset in datasets if 'Factor' in dataset in dataset]\n",
     "datasets_factors"
@@ -118,7 +153,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['F-F_Research_Data_Factors_weekly']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasets_factors_weekly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +203,7 @@
        " 'Emerging_MOM_Factor']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,27 +216,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Portfolios_Formed_on_ME',\n",
+       " 'Portfolios_Formed_on_ME_Wout_Div',\n",
+       " 'Portfolios_Formed_on_ME_Daily',\n",
+       " 'Portfolios_Formed_on_BE-ME',\n",
+       " 'Portfolios_Formed_on_BE-ME_Wout_Div',\n",
+       " 'Portfolios_Formed_on_BE-ME_Daily',\n",
+       " 'Portfolios_Formed_on_OP',\n",
+       " 'Portfolios_Formed_on_OP_Wout_Div',\n",
+       " 'Portfolios_Formed_on_OP_Daily',\n",
+       " 'Portfolios_Formed_on_INV',\n",
+       " 'Portfolios_Formed_on_INV_Wout_Div',\n",
+       " 'Portfolios_Formed_on_INV_Daily',\n",
+       " '6_Portfolios_2x3',\n",
+       " '6_Portfolios_2x3_Wout_Div',\n",
+       " '6_Portfolios_2x3_weekly',\n",
+       " '6_Portfolios_2x3_daily',\n",
+       " '25_Portfolios_5x5',\n",
+       " '25_Portfolios_5x5_Wout_Div',\n",
+       " '25_Portfolios_5x5_Daily',\n",
+       " '100_Portfolios_10x10',\n",
+       " '100_Portfolios_10x10_Wout_Div',\n",
+       " '100_Portfolios_10x10_Daily',\n",
+       " '6_Portfolios_ME_OP_2x3',\n",
+       " '6_Portfolios_ME_OP_2x3_Wout_Div',\n",
+       " '6_Portfolios_ME_OP_2x3_daily',\n",
+       " '25_Portfolios_ME_OP_5x5',\n",
+       " '25_Portfolios_ME_OP_5x5_Wout_Div',\n",
+       " '25_Portfolios_ME_OP_5x5_daily',\n",
+       " '100_Portfolios_ME_OP_10x10',\n",
+       " '100_Portfolios_10x10_ME_OP_Wout_Div',\n",
+       " '100_Portfolios_ME_OP_10x10_daily',\n",
+       " '6_Portfolios_ME_INV_2x3',\n",
+       " '6_Portfolios_ME_INV_2x3_Wout_Div',\n",
+       " '6_Portfolios_ME_INV_2x3_daily',\n",
+       " '25_Portfolios_ME_INV_5x5',\n",
+       " '25_Portfolios_ME_INV_5x5_Wout_Div',\n",
+       " '25_Portfolios_ME_INV_5x5_daily',\n",
+       " '100_Portfolios_ME_INV_10x10',\n",
+       " '100_Portfolios_10x10_ME_INV_Wout_Div',\n",
+       " '100_Portfolios_ME_INV_10x10_daily',\n",
+       " '25_Portfolios_BEME_OP_5x5',\n",
+       " '25_Portfolios_BEME_OP_5x5_Wout_Div',\n",
+       " '25_Portfolios_BEME_OP_5x5_daily',\n",
+       " '25_Portfolios_BEME_INV_5x5',\n",
+       " '25_Portfolios_BEME_INV_5x5_Wout_Div',\n",
+       " '25_Portfolios_BEME_INV_5x5_daily',\n",
+       " '25_Portfolios_OP_INV_5x5',\n",
+       " '25_Portfolios_OP_INV_5x5_Wout_Div',\n",
+       " '25_Portfolios_OP_INV_5x5_daily',\n",
+       " '32_Portfolios_ME_BEME_OP_2x4x4',\n",
+       " '32_Portfolios_ME_BEME_OP_2x4x4_Wout_Div',\n",
+       " '32_Portfolios_ME_BEME_INV_2x4x4',\n",
+       " '32_Portfolios_ME_BEME_INV_2x4x4_Wout_Div',\n",
+       " '32_Portfolios_ME_OP_INV_2x4x4',\n",
+       " '32_Portfolios_ME_OP_INV_2x4x4_Wout_Div',\n",
+       " 'Portfolios_Formed_on_E-P',\n",
+       " 'Portfolios_Formed_on_E-P_Wout_Div',\n",
+       " 'Portfolios_Formed_on_CF-P',\n",
+       " 'Portfolios_Formed_on_CF-P_Wout_Div',\n",
+       " 'Portfolios_Formed_on_D-P',\n",
+       " 'Portfolios_Formed_on_D-P_Wout_Div',\n",
+       " '6_Portfolios_ME_EP_2x3',\n",
+       " '6_Portfolios_ME_EP_2x3_Wout_Div',\n",
+       " '6_Portfolios_ME_CFP_2x3',\n",
+       " '6_Portfolios_ME_CFP_2x3_Wout_Div',\n",
+       " '6_Portfolios_ME_DP_2x3',\n",
+       " '6_Portfolios_ME_DP_2x3_Wout_Div',\n",
+       " '6_Portfolios_ME_Prior_12_2',\n",
+       " '6_Portfolios_ME_Prior_12_2_Daily',\n",
+       " '25_Portfolios_ME_Prior_12_2',\n",
+       " '25_Portfolios_ME_Prior_12_2_Daily',\n",
+       " '10_Portfolios_Prior_12_2',\n",
+       " '10_Portfolios_Prior_12_2_Daily',\n",
+       " '6_Portfolios_ME_Prior_1_0',\n",
+       " '6_Portfolios_ME_Prior_1_0_Daily',\n",
+       " '25_Portfolios_ME_Prior_1_0',\n",
+       " '25_Portfolios_ME_Prior_1_0_Daily',\n",
+       " '10_Portfolios_Prior_1_0',\n",
+       " '10_Portfolios_Prior_1_0_Daily',\n",
+       " '6_Portfolios_ME_Prior_60_13',\n",
+       " '6_Portfolios_ME_Prior_60_13_Daily',\n",
+       " '25_Portfolios_ME_Prior_60_13',\n",
+       " '25_Portfolios_ME_Prior_60_13_Daily',\n",
+       " '10_Portfolios_Prior_60_13',\n",
+       " '10_Portfolios_Prior_60_13_Daily',\n",
+       " 'Portfolios_Formed_on_AC',\n",
+       " '25_Portfolios_ME_AC_5x5',\n",
+       " 'Portfolios_Formed_on_BETA',\n",
+       " '25_Portfolios_ME_BETA_5x5',\n",
+       " 'Portfolios_Formed_on_NI',\n",
+       " '25_Portfolios_ME_NI_5x5',\n",
+       " 'Portfolios_Formed_on_VAR',\n",
+       " '25_Portfolios_ME_VAR_5x5',\n",
+       " 'Portfolios_Formed_on_RESVAR',\n",
+       " '25_Portfolios_ME_RESVAR_5x5',\n",
+       " '5_Industry_Portfolios',\n",
+       " '5_Industry_Portfolios_Wout_Div',\n",
+       " '5_Industry_Portfolios_daily',\n",
+       " '10_Industry_Portfolios',\n",
+       " '10_Industry_Portfolios_Wout_Div',\n",
+       " '10_Industry_Portfolios_daily',\n",
+       " '12_Industry_Portfolios',\n",
+       " '12_Industry_Portfolios_Wout_Div',\n",
+       " '12_Industry_Portfolios_daily',\n",
+       " '17_Industry_Portfolios',\n",
+       " '17_Industry_Portfolios_Wout_Div',\n",
+       " '17_Industry_Portfolios_daily',\n",
+       " '30_Industry_Portfolios',\n",
+       " '30_Industry_Portfolios_Wout_Div',\n",
+       " '30_Industry_Portfolios_daily',\n",
+       " '38_Industry_Portfolios',\n",
+       " '38_Industry_Portfolios_Wout_Div',\n",
+       " '38_Industry_Portfolios_daily',\n",
+       " '48_Industry_Portfolios',\n",
+       " '48_Industry_Portfolios_Wout_Div',\n",
+       " '48_Industry_Portfolios_daily',\n",
+       " '49_Industry_Portfolios',\n",
+       " '49_Industry_Portfolios_Wout_Div',\n",
+       " '49_Industry_Portfolios_daily',\n",
+       " 'ME_Breakpoints',\n",
+       " 'BE-ME_Breakpoints',\n",
+       " 'OP_Breakpoints',\n",
+       " 'INV_Breakpoints',\n",
+       " 'E-P_Breakpoints',\n",
+       " 'CF-P_Breakpoints',\n",
+       " 'D-P_Breakpoints',\n",
+       " 'Prior_2-12_Breakpoints',\n",
+       " 'Developed_6_Portfolios_ME_BE-ME',\n",
+       " 'Developed_6_Portfolios_ME_BE-ME_daily',\n",
+       " 'Developed_ex_US_6_Portfolios_ME_BE-ME',\n",
+       " 'Developed_ex_US_6_Portfolios_ME_BE-ME_daily',\n",
+       " 'Europe_6_Portfolios_ME_BE-ME',\n",
+       " 'Europe_6_Portfolios_ME_BE-ME_daily',\n",
+       " 'Japan_6_Portfolios_ME_BE-ME',\n",
+       " 'Japan_6_Portfolios_ME_BE-ME_daily',\n",
+       " 'Asia_Pacific_ex_Japan_6_Portfolios_ME_BE-ME',\n",
+       " 'Asia_Pacific_ex_Japan_6_Portfolios_ME_BE-ME_daily',\n",
+       " 'North_America_6_Portfolios_ME_BE-ME',\n",
+       " 'North_America_6_Portfolios_ME_BE-ME_daily',\n",
+       " 'Developed_25_Portfolios_ME_BE-ME',\n",
+       " 'Developed_25_Portfolios_ME_BE-ME_daily',\n",
+       " 'Developed_ex_US_25_Portfolios_ME_BE-ME',\n",
+       " 'Developed_ex_US_25_Portfolios_ME_BE-ME_daily',\n",
+       " 'Europe_25_Portfolios_ME_BE-ME',\n",
+       " 'Europe_25_Portfolios_ME_BE-ME_daily',\n",
+       " 'Japan_25_Portfolios_ME_BE-ME',\n",
+       " 'Japan_25_Portfolios_ME_BE-ME_daily',\n",
+       " 'Asia_Pacific_ex_Japan_25_Portfolios_ME_BE-ME',\n",
+       " 'Asia_Pacific_ex_Japan_25_Portfolios_ME_BE-ME_daily',\n",
+       " 'North_America_25_Portfolios_ME_BE-ME',\n",
+       " 'North_America_25_Portfolios_ME_BE-ME_daily',\n",
+       " 'Developed_6_Portfolios_ME_OP',\n",
+       " 'Developed_6_Portfolios_ME_OP_Daily',\n",
+       " 'Developed_ex_US_6_Portfolios_ME_OP',\n",
+       " 'Developed_ex_US_6_Portfolios_ME_OP_Daily',\n",
+       " 'Europe_6_Portfolios_ME_OP',\n",
+       " 'Europe_6_Portfolios_ME_OP_Daily',\n",
+       " 'Japan_6_Portfolios_ME_OP',\n",
+       " 'Japan_6_Portfolios_ME_OP_Daily',\n",
+       " 'Asia_Pacific_ex_Japan_6_Portfolios_ME_OP',\n",
+       " 'Asia_Pacific_ex_Japan_6_Portfolios_ME_OP_Daily',\n",
+       " 'North_America_6_Portfolios_ME_OP',\n",
+       " 'North_America_6_Portfolios_ME_OP_Daily',\n",
+       " 'Developed_25_Portfolios_ME_OP',\n",
+       " 'Developed_25_Portfolios_ME_OP_Daily',\n",
+       " 'Developed_ex_US_25_Portfolios_ME_OP',\n",
+       " 'Developed_ex_US_25_Portfolios_ME_OP_Daily',\n",
+       " 'Europe_25_Portfolios_ME_OP',\n",
+       " 'Europe_25_Portfolios_ME_OP_Daily',\n",
+       " 'Japan_25_Portfolios_ME_OP',\n",
+       " 'Japan_25_Portfolios_ME_OP_Daily',\n",
+       " 'Asia_Pacific_ex_Japan_25_Portfolios_ME_OP',\n",
+       " 'Asia_Pacific_ex_Japan_25_Portfolios_ME_OP_Daily',\n",
+       " 'North_America_25_Portfolios_ME_OP',\n",
+       " 'North_America_25_Portfolios_ME_OP_Daily',\n",
+       " 'Developed_6_Portfolios_ME_INV',\n",
+       " 'Developed_6_Portfolios_ME_INV_Daily',\n",
+       " 'Developed_ex_US_6_Portfolios_ME_INV',\n",
+       " 'Developed_ex_US_6_Portfolios_ME_INV_Daily',\n",
+       " 'Europe_6_Portfolios_ME_INV',\n",
+       " 'Europe_6_Portfolios_ME_INV_Daily',\n",
+       " 'Japan_6_Portfolios_ME_INV',\n",
+       " 'Japan_6_Portfolios_ME_INV_Daily',\n",
+       " 'Asia_Pacific_ex_Japan_6_Portfolios_ME_INV',\n",
+       " 'Asia_Pacific_ex_Japan_6_Portfolios_ME_INV_Daily',\n",
+       " 'North_America_6_Portfolios_ME_INV',\n",
+       " 'North_America_6_Portfolios_ME_INV_Daily',\n",
+       " 'Developed_25_Portfolios_ME_INV',\n",
+       " 'Developed_25_Portfolios_ME_INV_Daily',\n",
+       " 'Developed_ex_US_25_Portfolios_ME_INV',\n",
+       " 'Developed_ex_US_25_Portfolios_ME_INV_Daily',\n",
+       " 'Europe_25_Portfolios_ME_INV',\n",
+       " 'Europe_25_Portfolios_ME_INV_Daily',\n",
+       " 'Japan_25_Portfolios_ME_INV',\n",
+       " 'Japan_25_Portfolios_ME_INV_Daily',\n",
+       " 'Asia_Pacific_ex_Japan_25_Portfolios_ME_INV',\n",
+       " 'Asia_Pacific_ex_Japan_25_Portfolios_ME_INV_Daily',\n",
+       " 'North_America_25_Portfolios_ME_INV',\n",
+       " 'North_America_25_Portfolios_ME_INV_Daily',\n",
+       " 'Developed_6_Portfolios_ME_Prior_12_2',\n",
+       " 'Developed_6_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Developed_ex_US_6_Portfolios_ME_Prior_12_2',\n",
+       " 'Developed_ex_US_6_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Europe_6_Portfolios_ME_Prior_12_2',\n",
+       " 'Europe_6_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Japan_6_Portfolios_ME_Prior_12_2',\n",
+       " 'Japan_6_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Asia_Pacific_ex_Japan_6_Portfolios_ME_Prior_12_2',\n",
+       " 'Asia_Pacific_ex_Japan_6_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'North_America_6_Portfolios_ME_Prior_12_2',\n",
+       " 'North_America_6_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Developed_25_Portfolios_ME_Prior_12_2',\n",
+       " 'Developed_25_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Developed_ex_US_25_Portfolios_ME_Prior_12_2',\n",
+       " 'Developed_ex_US_25_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Europe_25_Portfolios_ME_Prior_12_2',\n",
+       " 'Europe_25_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Japan_25_Portfolios_ME_Prior_12_2',\n",
+       " 'Japan_25_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Asia_Pacific_ex_Japan_25_Portfolios_ME_Prior_12_2',\n",
+       " 'Asia_Pacific_ex_Japan_25_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'North_America_25_Portfolios_ME_Prior_12_2',\n",
+       " 'North_America_25_Portfolios_ME_Prior_250_20_daily',\n",
+       " 'Developed_32_Portfolios_ME_BE-ME_OP_2x4x4',\n",
+       " 'Developed_ex_US_32_Portfolios_ME_BE-ME_OP_2x4x4',\n",
+       " 'Europe_32_Portfolios_ME_BE-ME_OP_2x4x4',\n",
+       " 'Japan_32_Portfolios_ME_BE-ME_OP_2x4x4',\n",
+       " 'Asia_Pacific_ex_Japan_32_Portfolios_ME_BE-ME_OP_2x4x4',\n",
+       " 'North_America_32_Portfolios_ME_BE-ME_OP_2x4x4',\n",
+       " 'Developed_32_Portfolios_ME_BE-ME_INV(TA)_2x4x4',\n",
+       " 'Developed_ex_US_32_Portfolios_ME_BE-ME_INV(TA)_2x4x4',\n",
+       " 'Europe_32_Portfolios_ME_BE-ME_INV(TA)_2x4x4',\n",
+       " 'Japan_32_Portfolios_ME_BE-ME_INV(TA)_2x4x4',\n",
+       " 'Asia_Pacific_ex_Japan_32_Portfolios_ME_BE-ME_INV(TA)_2x4x4',\n",
+       " 'North_America_32_Portfolios_ME_BE-ME_INV(TA)_2x4x4',\n",
+       " 'Developed_32_Portfolios_ME_INV(TA)_OP_2x4x4',\n",
+       " 'Developed_ex_US_32_Portfolios_ME_INV(TA)_OP_2x4x4',\n",
+       " 'Europe_32_Portfolios_ME_INV(TA)_OP_2x4x4',\n",
+       " 'Japan_32_Portfolios_ME_INV(TA)_OP_2x4x4',\n",
+       " 'Asia_Pacific_ex_Japan_32_Portfolios_ME_INV(TA)_OP_2x4x4',\n",
+       " 'North_America_32_Portfolios_ME_INV(TA)_OP_2x4x4',\n",
+       " 'Emerging_Markets_6_Portfolios_ME_BE-ME',\n",
+       " 'Emerging_Markets_6_Portfolios_ME_OP',\n",
+       " 'Emerging_Markets_6_Portfolios_ME_INV',\n",
+       " 'Emerging_Markets_6_Portfolios_ME_Prior_12_2',\n",
+       " 'Emerging_Markets_4_Portfolios_BE-ME_OP',\n",
+       " 'Emerging_Markets_4_Portfolios_OP_INV',\n",
+       " 'Emerging_Markets_4_Portfolios_BE-ME_INV']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create dataframe with elements of datasets but not with factors\n",
+    "datasets_not_factors = [dataset for dataset in datasets if dataset not in datasets_factors]\n",
+    "datasets_not_factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "No. of datasets: 297\n",
       "Number of datasets_factors: 49\n",
       "Number of datasets_factors_5F: 15\n",
       "Number of datasets_factors_3F: 12\n",
       "Number of datasets_factors_others: 22\n",
-      "Number of datasets_factors_weekly: 1\n"
+      "Number of datasets_factors_weekly: 1\n",
+      "Number of datasets_not_factors: 248\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Number of datasets_factors: {len(datasets_factors)}\")                   # 49\n",
-    "print(f\"Number of datasets_factors_5F: {len(datasets_factors_5F)}\")             # 15\n",
-    "print(f\"Number of datasets_factors_3F: {len(datasets_factors_3F)}\")             # 12\n",
-    "print(f\"Number of datasets_factors_others: {len(datasets_factors_others)}\")     # 22\n",
-    "print(f\"Number of datasets_factors_weekly: {len(datasets_factors_weekly)}\")     # 1"
+    "print(f'No. of datasets: {len(datasets)}')                                      # 297  last update: 2024-02-27\n",
+    "print(f'Number of datasets_factors: {len(datasets_factors)}')                   # 49\n",
+    "print(f'Number of datasets_factors_5F: {len(datasets_factors_5F)}')             # 15\n",
+    "print(f'Number of datasets_factors_3F: {len(datasets_factors_3F)}')             # 12\n",
+    "print(f'Number of datasets_factors_others: {len(datasets_factors_others)}')     # 22\n",
+    "print(f'Number of datasets_factors_weekly: {len(datasets_factors_weekly)}')     # 1\n",
+    "print(f'Number of datasets_not_factors: {len(datasets_not_factors)}')           # 248"
    ]
   },
   {
@@ -452,7 +780,7 @@
     "# Selecting the dataset of interest in string format\n",
     "ff3_dataset_name = 'F-F_Research_Data_Factors'\n",
     "ff5_dataset_name = 'F-F_Research_Data_5_Factors_2x3'\n",
-    "# start = date_format(\"2010-1-1\"\", %Y-%m-%d\")\n",
+    "# start = date_format('2010-1-1'', %Y-%m-%d')\n",
     "start = datetime.datetime(1979, 12, 31)\n",
     "\n",
     "ff3 = web.DataReader(ff3_dataset_name, 'famafrench', start)[0]\n",
@@ -743,7 +1071,7 @@
    ],
    "source": [
     "# get time series of FCNTX\n",
-    "asset_prices = yf.download(\"FCNTX\")\n",
+    "asset_prices = yf.download('FCNTX')\n",
     "# stop at ff_last\n",
     "asset_prices = asset_prices[:ff_last]\n",
     "asset_prices = asset_prices[['Close']]\n",
