Reorg folders + add pyfolio examples + add zipline-reloaded

--- a/Exercises/ptf_analysis/dc_pyfolio.ipynb
+++ b/Exercises/ptf_analysis/dc_pyfolio.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "# transfor the dataframe in Series\n",
+    "# transfor the dataframe in Series for pyfolio to ingest\n",
     "returns = returns.squeeze()\n",
     "returns"
    ]
