--- a/Exercises/fama-french SPUS/fama_french_spus.ipynb
+++ b/Exercises/fama-french SPUS/fama_french_spus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,27 +14,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_100192/2726091380.py:3: UserWarning: Parsing dates in %d.%m.%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\phil7\\AppData\\Local\\Temp\\ipykernel_22360\\3367856652.py:3: UserWarning: Parsing dates in %d.%m.%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  strategies_prices = pd.read_csv(file_path, parse_dates=True, index_col=0)\n"
      ]
     }
    ],
    "source": [
     "# Step 2: Load the data\n",
-    "file_path = './data/spus_2024.csv'\n",
+    "file_path = '../../data/spus_2024.csv'\n",
     "strategies_prices = pd.read_csv(file_path, parse_dates=True, index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_100192/3849217727.py:2: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "C:\\Users\\phil7\\AppData\\Local\\Temp\\ipykernel_22360\\3849217727.py:2: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
       "  ff_factors = pdr.DataReader('F-F_Research_Data_Factors_daily', 'famafrench', start='2024-01-01', end='2024-04-30')[0]\n",
-      "/tmp/ipykernel_100192/3849217727.py:3: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "C:\\Users\\phil7\\AppData\\Local\\Temp\\ipykernel_22360\\3849217727.py:3: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
       "  momentum_factor = pdr.DataReader('F-F_Momentum_Factor_daily', 'famafrench', start='2024-01-01', end='2024-04-30')[0]\n"
      ]
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -113,19 +113,19 @@
      "text": [
       "Coefficients:\n",
       "        SPUS Value  SPUS Momentum  SPUS Quality  SPUS Low Beta  SPUS Ptf\n",
-      "const       -0.000         -0.001         0.000          0.000     0.000\n",
-      "Mkt-RF       1.126          1.087         1.001          0.823     0.989\n",
-      "SMB         -0.025          0.093        -0.004         -0.168    -0.004\n",
-      "HML          0.289         -0.005        -0.036         -0.093     0.076\n",
-      "Mom         -0.228          0.502         0.043         -0.313     0.023\n",
+      "const       -0.000         -0.000        -0.000          0.000    -0.000\n",
+      "Mkt-RF       1.152          1.050         1.017          0.795     0.992\n",
+      "SMB         -0.026          0.109        -0.022         -0.164    -0.011\n",
+      "HML          0.218         -0.039         0.016         -0.040     0.068\n",
+      "Mom         -0.250          0.474         0.055         -0.281     0.017\n",
       "\n",
       "P-Values:\n",
       "        SPUS Value  SPUS Momentum  SPUS Quality  SPUS Low Beta  SPUS Ptf\n",
-      "const        0.972          0.315         0.511          0.558     0.838\n",
+      "const        0.555          0.527         0.886          0.368     0.841\n",
       "Mkt-RF       0.000          0.000         0.000          0.000     0.000\n",
-      "SMB          0.681          0.183         0.938          0.002     0.901\n",
-      "HML          0.001          0.961         0.595          0.193     0.117\n",
-      "Mom          0.003          0.000         0.464          0.000     0.588\n"
+      "SMB          0.645          0.081         0.624          0.000     0.716\n",
+      "HML          0.003          0.615         0.784          0.479     0.079\n",
+      "Mom          0.000          0.000         0.274          0.000     0.621\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -156,19 +156,19 @@
      "text": [
       "\n",
       "Universe Coefficients:\n",
-      "const     0.000\n",
-      "Mkt-RF    1.009\n",
-      "SMB      -0.068\n",
-      "HML      -0.007\n",
-      "Mom       0.020\n",
+      "const    -0.000\n",
+      "Mkt-RF    1.010\n",
+      "SMB      -0.067\n",
+      "HML      -0.013\n",
+      "Mom       0.015\n",
       "dtype: float64\n",
       "\n",
       "Universe P-Values:\n",
-      "const     0.979\n",
+      "const     0.841\n",
       "Mkt-RF    0.000\n",
       "SMB       0.000\n",
-      "HML       0.789\n",
-      "Mom       0.363\n",
+      "HML       0.532\n",
+      "Mom       0.420\n",
       "dtype: float64\n"
      ]
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -201,19 +201,19 @@
       "\n",
       "Updated Coefficients:\n",
       "        SPUS Value  SPUS Momentum  SPUS Quality  SPUS Low Beta  SPUS Ptf  SPUS Bench\n",
-      "const       -0.000         -0.001         0.000          0.000     0.000       0.000\n",
-      "Mkt-RF       1.126          1.087         1.001          0.823     0.989       1.009\n",
-      "SMB         -0.025          0.093        -0.004         -0.168    -0.004      -0.068\n",
-      "HML          0.289         -0.005        -0.036         -0.093     0.076      -0.007\n",
-      "Mom         -0.228          0.502         0.043         -0.313     0.023       0.020\n",
+      "const       -0.000         -0.000        -0.000          0.000    -0.000      -0.000\n",
+      "Mkt-RF       1.152          1.050         1.017          0.795     0.992       1.010\n",
+      "SMB         -0.026          0.109        -0.022         -0.164    -0.011      -0.067\n",
+      "HML          0.218         -0.039         0.016         -0.040     0.068      -0.013\n",
+      "Mom         -0.250          0.474         0.055         -0.281     0.017       0.015\n",
       "\n",
       "Updated P-Values:\n",
       "        SPUS Value  SPUS Momentum  SPUS Quality  SPUS Low Beta  SPUS Ptf  SPUS Bench\n",
-      "const        0.972          0.315         0.511          0.558     0.838       0.979\n",
+      "const        0.555          0.527         0.886          0.368     0.841       0.841\n",
       "Mkt-RF       0.000          0.000         0.000          0.000     0.000       0.000\n",
-      "SMB          0.681          0.183         0.938          0.002     0.901       0.000\n",
-      "HML          0.001          0.961         0.595          0.193     0.117       0.789\n",
-      "Mom          0.003          0.000         0.464          0.000     0.588       0.363\n"
+      "SMB          0.645          0.081         0.624          0.000     0.716       0.000\n",
+      "HML          0.003          0.615         0.784          0.479     0.079       0.532\n",
+      "Mom          0.000          0.000         0.274          0.000     0.621       0.420\n"
      ]
     }
    ],
@@ -239,22 +239,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 7: Save the results to a CSV file\n",
-    "coefficients.to_csv('./data/coefficients.csv')\n",
-    "p_values.to_csv('./data/p_values.csv')"
+    "coefficients.to_csv('../../output/coefficients.csv')\n",
+    "p_values.to_csv('../../output/p_values.csv')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "```\n",
     "The code above is a Python script that performs the following steps:\n",
     "\n",
     "1. Import the necessary libraries.\n",
@@ -270,8 +267,7 @@
     "You can run this script in a Python environment to analyze the Fama-French 4-factor model for the strategies and the S&P 500 index. The results will be saved to CSV files for further analysis or reporting.\n",
     "\n",
     "Please note that you may need to install the required libraries (`pandas`, `statsmodels`, `pandas_datareader`) if you haven't already done so. You can install them using `pip` by running the following commands in your Python environment:\n",
-    "\n",
-    "```bash\n"
+    "\n"
    ]
   },
   {
@@ -283,8 +279,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
