--- a/Exercises/fama-french/fama_french_csv.ipynb
+++ b/Exercises/fama-french/fama_french_csv.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "coding_finance_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
